# porygon-experimental

./: Cargo.toml
macros/: Cargo.toml
macros/src/: init.rs  lib.rs
src/: main.rs
src/app/: activity.rs  mod.rs
src/core/: context.rs  mod.rs  prelude.rs
src/core/command/: interaction.rs  mod.rs
src/core/controller/: brain.rs  mod.rs  upload.rs
src/core/event/: events.rs  mod.rs  registry.rs
src/core/guild/: mod.rs
src/core/guild/nickname/: mod.rs  properties.rs
src/core/init/: mod.rs
src/core/setup/: mod.rs  skip.rs  step.rs
src/core/setup/scope/: controller.rs  mod.rs  unique.rs
